# vadinator

./: .gitignore  Cargo.toml  NOTICE.txt  README.md  THIRD_PARTY_LICENSES.md  about.toml  third-party-licenses.html  vadinator.env.sample
.github/workflows/: ci.yml  release.yml
assets/: about.toml  licenses.hbs
src/: any_tts.rs  audio_out.rs  audio_proc.rs  break_in.rs  chat_history.rs  conv_engine.rs  conversation.rs  llm_client.rs  main.rs  piper_tts.rs  stream_client.rs
